--- a/third.html
+++ b/third.html
@@ -5,6 +5,7 @@
         <title>third contents</title>
         <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script async src="writenav.js"></script>
     </head>
     <body>
         <div id="background">
