--- a/first.html
+++ b/first.html
@@ -5,6 +5,7 @@
         <title>first contents</title>
         <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script async src="writenav.js"></script>
     </head>
     <body>
         <div id="background">
@@ -33,6 +34,5 @@
             <script>writenav('1st')</script>
         </nav>
         </div>
-        <script src="writenav.js"></script>
     </body>
 </html>
