--- a/first.html
+++ b/first.html
@@ -23,7 +23,7 @@
             </section>
             <section class="seconddesc"><a href="second.html" class="nohands">
                 Until Adam smith wrote the wealth of nations, <br>
-                the economic policy governing European society was mercantilism. <br>
+                the economic system governing European society was mercantilism. <br>
                 From a mercantilism point of view, when the country has lots of gold, <br>
                 there is much currency, and it will be used to build up the national power. <br>
                 This is utilized to bring lots of gold. <br>
