--- a/third.html
+++ b/third.html
@@ -19,7 +19,7 @@
                 the mercantilism was fading away. <br>
                 However, the emerging industrial country in the second half of 19th century <br>
                 enforced the mercantilist policies to protect their infant industry. <br>
-                Because this policy’s purpose is very similar to mercantilism, <br>
+                Because this system’s purpose is very similar to mercantilism, <br>
                 this is called “neo-mercantilism” or “protectionism”. <br>
             </a></section>
         </div>
